# sorry-rs

./: .gitignore  Cargo.toml
resource/jinkela/: sentence.json  template.hbs
src/: controller.rs  main.rs  service.rs
