[package]
name = "sorry-rs"
version = "0.1.0"
authors = ["bidao <bidao@gaoding.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
env_logger="0.7.1"
md5 = "0.7"
handlebars = "3.0"